objects/ffct__MergeProfileState__c.object
<CustomObject>
    <description>Hold the configuration and status of a merge profile job.</description>
    <fields>
        <fullName>ffct__Attachments_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deprecated --To check if attachments for profile have been created.</description>
        <label>DEPRECATED Attachments Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffct__Error__c</fullName>
        <label>Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ffct__MergeCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Merge Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffct__MergeInProgress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Merge In Progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffct__SourceProfileId__c</fullName>
        <label>Source Profile API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffct__SourceProfile__c</fullName>
        <label>Source Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffct__TargetProfileId__c</fullName>
        <label>Target Profile API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffct__TargetProfile__c</fullName>
        <label>Target Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Merge Profile State</label>
    <listViews>
        <fullName>ffct__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MP-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merge Profile State</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>